--- a/index.html
+++ b/index.html
@@ -7,80 +7,84 @@
   <link rel="icon" type="image/png" href="logo.png"/>
   <style>
     :root{
-      /* boje */
-      --dark:#121315;             /* vanjska tamno siva */
-      --dark-2:#1a1b1f;
-      --emerald:#023020;          /* zelene poruke */
+      --light-gray:#f2f3f5;    /* svijetlija siva */
+      --light-gray-2:#e6e7ea;
+      --emerald:#023020;       /* zelena za me poruke */
       --emerald-2:#024e37;
-      --lgold:#EADFB7;            /* svijetlo zlato */
-      --lgold-2:#D9C68C;          /* sekundarno svijetlo zlato */
-      --text:#F5F7F6;
-      --muted:#b7b7bb;
+      --lgold:#EADFB7;         /* svijetlo zlato (naglasci) */
+      --lgold-2:#D9C68C;
       --stroke:rgba(233,220,183,.30);
+      --text-dark:#222;
+      --text-muted:#666;
     }
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%}
 
-    /* VANJSKA POZADINA – tamno siva */
+    /* VANJSKA POZADINA – SVIJETLO SIVA */
     body{
       font:16px/1.6 Inter,system-ui,"Segoe UI",Roboto,sans-serif;
-      background: radial-gradient(900px 600px at -20% -10%, rgba(234,223,183,.08), transparent 60%),
-                  linear-gradient(180deg,var(--dark),var(--dark-2));
-      color:#eaeaea;
+      background: radial-gradient(900px 600px at -20% -10%, rgba(234,223,183,.12), transparent 60%),
+                  linear-gradient(180deg,var(--light-gray),var(--light-gray-2));
+      color:var(--text-dark);
       display:flex; flex-direction:column; align-items:center; min-height:100vh;
     }
 
-    /* Header */
+    /* HEADER s logom i natpisom u zlatnoj */
     .nav{
       position:sticky; top:0; width:100%; z-index:10;
       display:flex; align-items:center; justify-content:center; gap:12px;
       padding:12px 18px;
-      background:rgba(18,19,21,.7); backdrop-filter:blur(10px);
-      border-bottom:1px solid rgba(234,223,183,.20);
-      box-shadow:0 4px 20px rgba(0,0,0,.35);
+      background:rgba(255,255,255,.8); backdrop-filter:blur(10px);
+      border-bottom:1px solid rgba(234,223,183,.35);
+      box-shadow:0 4px 20px rgba(0,0,0,.08);
     }
-    .nav-left{position:absolute; left:18px; display:flex; align-items:center; gap:10px}
-    .logo{height:30px}
-    .brand{font-weight:800; color:#fff; letter-spacing:.4px}
-    .tag{padding:4px 10px; border-radius:999px; font-size:12px; color:#111;
+    .nav-left{
+      position:absolute; left:18px; display:flex; align-items:center; gap:10px;
+      color:var(--lgold);
+      font-weight:800; letter-spacing:.3px;
+    }
+    .logo{height:30px; filter: sepia(1) saturate(2.2) hue-rotate(5deg) brightness(1.05) drop-shadow(0 0 10px rgba(234,223,183,.45));}
+    .tag{
+      padding:4px 10px; border-radius:999px; font-size:12px; color:#111;
       background:linear-gradient(135deg,var(--lgold),#f5edd0);
       border:1px solid rgba(255,255,255,.15);
       box-shadow:0 6px 18px rgba(234,223,183,.25);
     }
 
-    /* Layout */
+    /* LAYOUT */
     .container{max-width:950px; width:100%; margin:26px auto; padding:0 16px; display:flex; flex-direction:column; gap:18px}
 
     .hero{
       padding:18px 20px; border-radius:16px;
-      background:linear-gradient(135deg,rgba(255,255,255,.1),rgba(234,223,183,.08));
-      border:1px solid rgba(234,223,183,.2);
-      box-shadow:0 10px 25px rgba(0,0,0,.25);
+      background:linear-gradient(135deg,rgba(255,255,255,.7),rgba(234,223,183,.25));
+      border:1px solid rgba(234,223,183,.4);
+      box-shadow:0 10px 22px rgba(0,0,0,.08);
       display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:10px;
     }
-    .hero h1{margin:0; font-weight:900}
-    .hero p{margin:4px 0 0; color:#c9c9ce; font-size:14px}
-    .chip{padding:8px 12px; border-radius:999px; font-size:13px; border:1px solid rgba(234,223,183,.35); background:rgba(255,255,255,.06); color:#ddd; margin-left:8px}
+    .hero h1{margin:0; font-weight:900; color:#0e0e0f}
+    .hero p{margin:4px 0 0; color:var(--text-muted); font-size:14px}
+    .chip{
+      padding:8px 12px; border-radius:999px; font-size:13px;
+      border:1px solid rgba(234,223,183,.35); background:rgba(255,255,255,.7); color:#333; margin-left:8px
+    }
 
     /* CHATBOX – bijelo-zlatni gradient */
     .card{
       height:72vh; border-radius:22px; overflow:hidden; position:relative;
       background: linear-gradient(180deg,#ffffff 0%, #fff8e7 45%, #f3e7c1 100%);
       border:2px solid var(--stroke);
-      box-shadow:0 28px 70px rgba(0,0,0,.35);
-      display:flex; flex-direction:column;
-      color:#111;
+      box-shadow:0 28px 60px rgba(0,0,0,.15);
+      display:flex; flex-direction:column; color:#111;
     }
-    /* watermark u chatu – vrlo suptilan */
     .card::before{
       content:""; position:absolute; inset:0; pointer-events:none;
       background:url('logo.png') center/240px no-repeat;
-      opacity:.05; filter:grayscale(100%) brightness(250%);
+      opacity:.05; filter:grayscale(100%) brightness(240%);
     }
 
     .card-head{
       padding:12px 16px; display:flex; justify-content:space-between; align-items:center;
-      background:linear-gradient(180deg, rgba(255,255,255,.8), rgba(255,255,255,.6));
+      background:linear-gradient(180deg, rgba(255,255,255,.9), rgba(255,255,255,.7));
       border-bottom:1px solid rgba(0,0,0,.06);
     }
     .status{display:flex; align-items:center; gap:8px; color:#333; font-size:13px}
@@ -88,44 +92,69 @@
 
     .msgs{flex:1; padding:18px; display:flex; flex-direction:column; gap:12px; overflow:auto}
 
-    /* mjehurići poruka (AI tamno-sivi, korisnik zeleni) */
-    .msg{padding:12px 16px; max-width:78%; border-radius:14px; font-size:15px; line-height:1.5; word-wrap:break-word; box-shadow:0 2px 8px rgba(0,0,0,.12); animation:fade .2s ease}
-    .ai{align-self:flex-start; background:#1f1f23; color:#f2f2f2; border:1px solid rgba(234,223,183,.22)}
-    .me{align-self:flex-end; background:var(--emerald-2); color:#fff; border:1px solid rgba(234,223,183,.30)}
+    /* poruke */
+    .msg{
+      position:relative;
+      padding:12px 16px; max-width:78%; border-radius:14px; font-size:15px; line-height:1.5;
+      word-wrap:break-word; box-shadow:0 2px 8px rgba(0,0,0,.08); animation:fade .2s ease
+    }
+    .ai{align-self:flex-start; background:#1f1f23; color:#f2f2f2; border:1px solid rgba(234,223,183,.25)}
+    .me{align-self:flex-end; background:var(--emerald-2); color:#fff; border:1px solid rgba(234,223,183,.32)}
 
-    /* TIPKANJE – rotirajući logo (umjesto “...”) */
+    /* copy ikonica na AI porukama */
+    .copy-btn{
+      position:absolute; top:6px; right:6px; width:26px; height:26px; border-radius:8px;
+      border:1px solid rgba(234,223,183,.35); background:rgba(255,255,255,.08);
+      display:flex; align-items:center; justify-content:center; cursor:pointer;
+      transition:.15s; opacity:.85;
+    }
+    .copy-btn:hover{ background:rgba(255,255,255,.18) }
+    .copy-btn svg{width:14px; height:14px; fill:var(--lgold-2)}
+
+    /* indikator tipkanja – rotirajući logo */
     .typing-logo{
       align-self:flex-start; padding:6px 10px; border-radius:12px;
       background:#1f1f23; border:1px dashed rgba(234,223,183,.35);
-      display:flex; align-items:center; gap:10px;
+      display:flex; align-items:center; gap:10px; color:#ddd;
     }
     .typing-logo img{height:18px; width:auto; animation:spin 1.2s linear infinite; filter:drop-shadow(0 0 8px rgba(234,223,183,.4))}
     @keyframes spin{to{transform:rotate(360deg)}}
 
     .card-foot{
       padding:12px; display:flex; gap:10px;
-      background:linear-gradient(0deg, rgba(255,255,255,.8), rgba(255,255,255,.6));
+      background:linear-gradient(0deg, rgba(255,255,255,.9), rgba(255,255,255,.7));
       border-top:1px solid rgba(0,0,0,.06);
     }
     input{
       flex:1; padding:14px; border-radius:12px; border:1px solid rgba(0,0,0,.12);
-      background:rgba(255,255,255,.8); color:#111; outline:none;
+      background:rgba(255,255,255,.9); color:#111; outline:none;
     }
     input:focus{border-color:var(--lgold-2); box-shadow:0 0 8px rgba(233,220,183,.6)}
-    /* 3D svijetlo-zlatni gumb */
     button{
       position:relative; padding:14px 20px; border-radius:12px; border:0; cursor:pointer;
       color:#111; font-weight:800; letter-spacing:.2px;
       background:linear-gradient(135deg,var(--lgold),var(--lgold-2));
-      box-shadow: inset 0 1px 0 rgba(255,255,255,.65),
-                  inset 0 -2px 0 rgba(160,140,80,.55),
-                  0 10px 22px rgba(233,220,183,.35);
+      box-shadow: inset 0 1px 0 rgba(255,255,255,.65), inset 0 -2px 0 rgba(160,140,80,.55), 0 10px 22px rgba(233,220,183,.35);
       transition:transform .18s ease, box-shadow .18s ease;
     }
     button:hover{ transform:translateY(-1px); box-shadow: inset 0 1px 0 rgba(255,255,255,.7), inset 0 -2px 0 rgba(160,140,80,.65), 0 14px 28px rgba(233,220,183,.45) }
     button:active{ transform:translateY(0) }
 
-    .footnote{margin:14px auto 28px; text-align:center; color:#bdbdc2; font-size:12px}
+    .footnote{margin:14px auto 28px; text-align:center; color:#8a8a90; font-size:12px}
+
+    /* FLOATING "ORDER ON FIVERR" */
+    .fiverr{
+      position:fixed; right:16px; bottom:18px; z-index:30;
+      display:flex; align-items:center; gap:10px;
+      padding:12px 16px; border-radius:16px; text-decoration:none;
+      color:#111; font-weight:900; letter-spacing:.2px;
+      background:linear-gradient(135deg,var(--lgold),var(--lgold-2));
+      border:1px solid rgba(0,0,0,.08);
+      box-shadow:0 12px 28px rgba(233,220,183,.35);
+      transition:.18s ease;
+    }
+    .fiverr:hover{ transform:translateY(-1px); box-shadow:0 16px 36px rgba(233,220,183,.45) }
+    .fiverr svg{width:18px; height:18px; fill:#111}
 
     @keyframes fade{from{opacity:0; transform:translateY(6px)} to{opacity:1; transform:none}}
 
@@ -133,14 +162,16 @@
       .container{margin:18px auto}
       .card{height:70vh; min-height:500px}
       .msg{max-width:88%}
+      .fiverr{right:12px; bottom:12px; padding:10px 14px}
     }
   </style>
 </head>
 <body>
+  <!-- HEADER -->
   <div class="nav">
     <div class="nav-left">
-      <img src="logo.png" alt="Hephos AI logo" class="logo" id="logo"/>
-      <span class="brand">Hephos AI</span>
+      <img src="logo.png" alt="Hephos AI logo" class="logo"/>
+      <span>Hephos AI</span>
     </div>
     <span class="tag">Premium AI Chatbot</span>
   </div>
@@ -149,7 +180,7 @@
     <section class="hero">
       <div>
         <h1>Hephos AI Assistant</h1>
-        <p>White & Light-Gold interface outside • Emerald chat bubbles inside.</p>
+        <p>Light-gray outer • Gold accents • Emerald chat bubbles.</p>
       </div>
       <div>
         <span class="chip">GPT-4o-mini</span>
@@ -158,6 +189,7 @@
       </div>
     </section>
 
+    <!-- CHATBOX -->
     <section class="card" role="region" aria-label="Chat window">
       <div class="card-head">
         <div class="status"><span class="dot"></span> Online • replies in seconds</div>
@@ -176,46 +208,84 @@
     <div class="footnote">© Hephos AI — Light-Gold accents #EADFB7 / #D9C68C</div>
   </main>
 
+  <!-- FLOATING ORDER BUTTON — promijeni URL na svoj Fiverr gig -->
+  <a class="fiverr" href="https://www.fiverr.com/" target="_blank" rel="noopener">
+    <!-- mali “bag” ikon -->
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M8 7V6a4 4 0 1 1 8 0v1h3a1 1 0 0 1 .99 1.141l-1.6 11.2A3 3 0 0 1 15.42 22H8.58a3 3 0 0 1-2.97-2.659L4.01 8.141A1 1 0 0 1 5 7h3Zm2 0h4V6a2 2 0 1 0-4 0v1Z"/></svg>
+    Order on Fiverr
+  </a>
+
   <script>
     const API_URL = 'https://hephos-ai-chatbot.onrender.com/chat'; // <-- stavi svoj Render URL
 
     const msgs = document.getElementById('msgs');
     const inp  = document.getElementById('input');
     const btn  = document.getElementById('send');
-    const logo = document.getElementById('logo');
 
     function escapeHtml(s){return s.replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[m]));}
+
+    /* dodaj poruku + copy gumb za AI */
     function addMsg(text, who='ai'){
-      const div=document.createElement('div'); div.className=`msg ${who}`;
-      div.innerHTML=escapeHtml(text); msgs.appendChild(div); msgs.scrollTop=msgs.scrollHeight; return div;
+      const div = document.createElement('div');
+      div.className = `msg ${who}`;
+      div.innerHTML = escapeHtml(text);
+      msgs.appendChild(div);
+
+      if(who === 'ai'){
+        const copy = document.createElement('button');
+        copy.className = 'copy-btn';
+        copy.innerHTML = `<svg viewBox="0 0 24 24"><path d="M16 1H4a2 2 0 0 0-2 2v14h2V3h12V1Zm3 4H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2Zm0 16H8V7h11v14Z"/></svg>`;
+        copy.title = "Copy to clipboard";
+        copy.addEventListener('click', () => {
+          const txt = div.textContent;
+          navigator.clipboard.writeText(txt).then(()=>{
+            copy.style.opacity = '1';
+            copy.style.background = 'rgba(255,255,255,.25)';
+            setTimeout(()=>{ copy.style.background='rgba(255,255,255,.08)'; }, 500);
+          });
+        });
+        div.appendChild(copy);
+      }
+
+      msgs.scrollTop = msgs.scrollHeight;
+      return div;
     }
-    /* novi indikator tipkanja – rotirajući logo */
+
+    /* indikator tipkanja – rotirajući logo */
     function addTypingLogo(){
-      const wrap=document.createElement('div'); wrap.className='typing-logo';
-      wrap.innerHTML='<img src="logo.png" alt="typing"/><span style="color:#ddd">Assistant is thinking…</span>';
-      msgs.appendChild(wrap); msgs.scrollTop=msgs.scrollHeight; return wrap;
+      const wrap = document.createElement('div');
+      wrap.className = 'typing-logo';
+      wrap.innerHTML = '<img src="logo.png" alt="typing"/><span>Assistant is thinking…</span>';
+      msgs.appendChild(wrap);
+      msgs.scrollTop = msgs.scrollHeight;
+      return wrap;
     }
 
     async function sendMessage(){
-      const text=inp.value.trim(); if(!text) return;
-      addMsg(text,'me'); inp.value='';
-      const typing=addTypingLogo();  // rotirajući logo umjesto “...”
-      logo.classList.add('glow');
+      const text = inp.value.trim();
+      if(!text) return;
+      addMsg(text,'me');
+      inp.value = '';
+      const typing = addTypingLogo();
 
       try{
-        const r=await fetch(API_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({message:text})});
-        const data=await r.json();
-        typing.remove(); logo.classList.remove('glow');
-        addMsg(data.response||data.error||'No response','ai');
+        const r = await fetch(API_URL, {
+          method:'POST',
+          headers:{'Content-Type':'application/json'},
+          body: JSON.stringify({ message: text })
+        });
+        const data = await r.json();
+        typing.remove();
+        addMsg(data.response || data.error || 'No response','ai');
       }catch(e){
-        typing.remove(); logo.classList.remove('glow');
+        typing.remove();
         addMsg('⚠️ Connection error. Please try again.','ai');
       }
-      msgs.scrollTop=msgs.scrollHeight;
+      msgs.scrollTop = msgs.scrollHeight;
     }
 
-    btn.addEventListener('click',sendMessage);
-    inp.addEventListener('keydown',e=>{ if(e.key==='Enter'){ e.preventDefault(); sendMessage(); }});
+    btn.addEventListener('click', sendMessage);
+    inp.addEventListener('keydown', e => { if(e.key === 'Enter'){ e.preventDefault(); sendMessage(); }});
   </script>
 </body>
 </html>
